Duplicate Data options don't exist for Light Probe and Grease Pencil #63864

Closed
opened 2019-04-24 19:36:20 +02:00 by RedMser · 8 comments
Contributor

Blender Version
Broken: version: 2.80 (sub 58), branch: blender2.7, commit date: 2019-04-21 20:30, hash: 797539e76c

In the User Preferences -> Editing -> Objects -> Duplicate Data, you have options for which types of data should be duplicated when an object is duplicated.

But for the new data types, LightProbes and Grease Pencil, no corresponding "duplicate data" option exists in this list.

**Blender Version** Broken: version: 2.80 (sub 58), branch: blender2.7, commit date: 2019-04-21 20:30, hash: `797539e76c` In the User Preferences -> Editing -> Objects -> Duplicate Data, you have options for which types of data should be duplicated when an object is duplicated. But for the new data types, LightProbes and Grease Pencil, no corresponding "duplicate data" option exists in this list.
Author
Contributor

Added subscriber: @RedMser

Added subscriber: @RedMser

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB
Brecht Van Lommel was assigned by Sebastian Parborg 2019-04-26 12:37:21 +02:00

@brecht bug or not?

@brecht bug or not?
Brecht Van Lommel removed their assignment 2019-04-30 12:50:42 +02:00
Antonio Vazquez was assigned by Brecht Van Lommel 2019-04-30 12:50:42 +02:00

Added subscriber: @fclem

Added subscriber: @fclem

I think these should be added for consistency yes, @antoniov and @fclem added these new object types.

I think these should be added for consistency yes, @antoniov and @fclem added these new object types.

I have added this possible fix: D4766

I have added this possible fix: [D4766](https://archive.blender.org/developer/D4766)

This issue was referenced by 9a4fd6da0f

This issue was referenced by 9a4fd6da0f3a6a27780ad868b0d0109ebfff0c8d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63864
No description provided.