Fix T63864 Duplicate Data options don't exist for Light Probe and Grease Pencil

See revision D4766