release/scripts/startup/bl_ui/space_userpref.py
@@ -318,6 +318,7 @@ class USERPREF_PT_edit_objects_duplicate_data(PreferencePanel, Panel):
         col.prop(edit, "use_duplicate_curve", text="Curve")
         # col.prop(edit, "use_duplicate_fcurve", text="F-Curve")
         col.prop(edit, "use_duplicate_light", text="Light")
+        col.prop(edit, "use_duplicate_lightprobe", text="Light Probe")
         col = flow.column()
         col.prop(edit, "use_duplicate_material", text="Material")
         col.prop(edit, "use_duplicate_mesh", text="Mesh")
@@ -327,6 +328,7 @@ class USERPREF_PT_edit_objects_duplicate_data(PreferencePanel, Panel):
         col.prop(edit, "use_duplicate_surface", text="Surface")
         col.prop(edit, "use_duplicate_text", text="Text")
         col.prop(edit, "use_duplicate_texture", text="Texture")
+        col.prop(edit, "use_duplicate_grease_pencil", text="Grease Pencil")
 
 
 class USERPREF_PT_edit_cursor(PreferencePanel, Panel):
